<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ChildLabourPicProofImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:padding="2dp"/>

        <TextView
            android:id="@+id/ChildLabourDescPlainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:layout_margin="5dp"
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Types Of Abuse:"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <CheckBox
                android:id="@+id/ChildLabourPhysicalAbuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Physical Abuse"/>

            <CheckBox
                android:id="@+id/ChildLabourSexualAbuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sexual Abuse"/>

            <CheckBox
                android:id="@+id/ChildLabourPsychologicalAbuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Psychological Abuse"/>

            <CheckBox
                android:id="@+id/ChildLabourAbandon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Abandon"/>

            <CheckBox
                android:id="@+id/ChildLabourChildLabour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Child Labour"/>

                <CheckBox
                    android:id="@+id/ChildLabourChildMarriage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Child Marriage" />

        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Child Aprox Age"/>

            <TextView
                android:id="@+id/ChildLabourApproxAgePlainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ChildLabourRadioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/ChildLabourRadioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/female" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ChildLabourAcceptButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Accept"
                android:background="#009688"
                android:layout_gravity="left"
                android:layout_marginBottom="25dp" />

            <Button
                android:id="@+id/ChildLabourRejectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reject"
                android:background="#009688"
                android:layout_marginLeft="60dp"
                android:layout_marginBottom="25dp" />

        </LinearLayout>



    </android.support.v7.widget.LinearLayoutCompat>

</ScrollView>